--- a/index.html
+++ b/index.html
@@ -1419,28 +1419,28 @@
             <h2 class="section-title">Certificates</h2>
             <div class="certificates-slider">
                 <div class="certificate">
-                    <img src="https://via.placeholder.com/300x200?text=Google+Sheets+and+Excel" alt="Certificate">
+                    <img src="https://github.com/farha61981/farhakousar/blob/main/ud.jpg">
                     <div class="overlay">Learn Google Sheets and Microsoft Excel</div>
                 </div>
                 <div class="certificate">
-                    <img src="https://via.placeholder.com/300x200?text=Visual+Presentations" alt="Certificate">
+                    <img src="https://github.com/farha61981/farhakousar/blob/main/vi.jpg">
                     <div class="overlay">Creating Memorable Visual Presentations</div>
                 </div>
                 <div class="certificate">
-                    <img src="https://via.placeholder.com/300x200?text=GitHub+Foundation" alt="Certificate">
+                    <img src="https://github.com/farha61981/farhakousar/blob/main/gfc.jpg">
                     <div class="overlay">GitHub Foundation</div>
                 </div>
                 <div class="certificate">
-                    <img src="https://via.placeholder.com/300x200?text=Oracle+Certified" alt="Certificate">
+                    <img src="https://github.com/farha61981/farhakousar/blob/main/or.jpg">
                     <div class="overlay">Oracle Certified Foundations Associate</div>
                 </div>
                 <div class="certificate">
-                    <img src="https://via.placeholder.com/300x200?text=Life+Skills" alt="Certificate">
+                    <img src="https://github.com/farha61981/farhakousar/blob/main/wf.jpg">
                     <div class="overlay">Life Skills (Jeevan Kaushal) 2.0</div>
                 </div>
                 <div class="certificate">
-                    <img src="https://via.placeholder.com/300x200?text=Python+for+Data+Science" alt="Certificate">
-                    <div class="overlay">Python for Data Science</div>
+                    <img src="https://github.com/farha61981/farhakousar/blob/main/isro.jpg" alt="Certificate">
+                    <div class="overlay">AIML for Geodata Analysis</div>
                 </div>
             </div>
         </section>
