--- a/index.html
+++ b/index.html
@@ -1415,35 +1415,32 @@
             </div>
         </section>
 
-        <section id="certificates">
-            <h2 class="section-title">Certificates</h2>
-            <div class="certificates-slider">
-                <div class="certificate">
-                    <img src="https://github.com/farha61981/farhakousar/blob/main/ud.jpg">
-                    <div class="overlay">Learn Google Sheets and Microsoft Excel</div>
-                </div>
-                <div class="certificate">
-                    <img src="https://github.com/farha61981/farhakousar/blob/main/vi.jpg">
-                    <div class="overlay">Creating Memorable Visual Presentations</div>
-                </div>
-                <div class="certificate">
-                    <img src="https://github.com/farha61981/farhakousar/blob/main/gfc.jpg">
-                    <div class="overlay">GitHub Foundation</div>
-                </div>
-                <div class="certificate">
-                    <img src="https://github.com/farha61981/farhakousar/blob/main/or.jpg">
-                    <div class="overlay">Oracle Certified Foundations Associate</div>
-                </div>
-                <div class="certificate">
-                    <img src="https://github.com/farha61981/farhakousar/blob/main/wf.jpg">
-                    <div class="overlay">Life Skills (Jeevan Kaushal) 2.0</div>
-                </div>
-                <div class="certificate">
-                    <img src="https://github.com/farha61981/farhakousar/blob/main/isro.jpg" alt="Certificate">
-                    <div class="overlay">AIML for Geodata Analysis</div>
-                </div>
-            </div>
-        </section>
+     <div class="certificates-slider">
+    <div class="certificate">
+        <img src="https://raw.githubusercontent.com/farha61981/farhakousar/main/ud.jpg" alt="Udemy Certificate">
+        <div class="overlay">Learn Google Sheets and Microsoft Excel</div>
+    </div>
+    <div class="certificate">
+        <img src="https://raw.githubusercontent.com/farha61981/farhakousar/main/vi.jpg" alt="Visual Presentations Certificate">
+        <div class="overlay">Creating Memorable Visual Presentations</div>
+    </div>
+    <div class="certificate">
+        <img src="https://raw.githubusercontent.com/farha61981/farhakousar/main/gfc.jpg" alt="GitHub Certificate">
+        <div class="overlay">GitHub Foundation</div>
+    </div>
+    <div class="certificate">
+        <img src="https://raw.githubusercontent.com/farha61981/farhakousar/main/or.jpg" alt="Oracle Certificate">
+        <div class="overlay">Oracle Certified Foundations Associate</div>
+    </div>
+    <div class="certificate">
+        <img src="https://raw.githubusercontent.com/farha61981/farhakousar/main/wf.jpg" alt="Wadhwani Foundation Certificate">
+        <div class="overlay">Life Skills (Jeevan Kaushal) 2.0</div>
+    </div>
+    <div class="certificate">
+        <img src="https://raw.githubusercontent.com/farha61981/farhakousar/main/isro.jpg" alt="ISRO Certificate">
+        <div class="overlay">AIML for Geodata Analysis</div>
+    </div>
+</div>
 
         <section id="testimonials">
             <h2 class="section-title">What Others Say</h2>
