--- a/index.html
+++ b/index.html
@@ -1092,10 +1092,10 @@
                 <div class="typing-text" id="typingText"></div>
                 <p>Passionate about transforming data into actionable insights and building intelligent solutions with machine learning. Let's create something amazing together!</p>
                 <div class="btn-group">
-                    <a href="#contact" class="btn btn-primary" id="hireMeBtn">Hire Me</a>
-                    <a href="https://github.com/farhakousar" target="_blank" class="btn btn-secondary">View GitHub</a>
-                    <a href="https://linkedin.com/in/farhakousar" target="_blank" class="btn btn-secondary">LinkedIn</a>
-                    <a href="#" class="btn btn-secondary" id="downloadResume">Download Resume</a>
+                    <a href="farhakousar576@gmail.com" class="btn btn-primary" id="hireMeBtn">Hire Me</a>
+                    <a href="https://github.com/FarhaKousar1601" target="_blank" class="btn btn-secondary">View GitHub</a>
+                    <a href="https://www.linkedin.com/in/farhakousar" target="_blank" class="btn btn-secondary">LinkedIn</a>
+                    <a href="https://drive.google.com/file/d/1IBuo8Ptvs_vG7WZSDuj0YqWgpvDlV3St/view?usp=drivesdk" class="btn btn-secondary" id="downloadResume">Download Resume</a>
                 </div>
             </div>
         </section>
@@ -1186,7 +1186,7 @@
                     <div class="skill-item">
                         <div class="skill-name">
                             <span>Looker Studio</span>
-                            <span>85%</span>
+                            <span>90%</span>
                         </div>
                         <div class="progress-container">
                             <div class="progress-bar" style="--progress-width: 85%; animation: animateProgress 1s ease-in-out forwards 0.3s"></div>
@@ -1269,7 +1269,7 @@
                     <div class="skill-item">
                         <div class="skill-name">
                             <span>JavaScript</span>
-                            <span>80%</span>
+                            <span>60%</span>
                         </div>
                         <div class="progress-container">
                             <div class="progress-bar" style="--progress-width: 80%; animation: animateProgress 1s ease-in-out forwards 0.2s"></div>
@@ -1277,8 +1277,8 @@
                     </div>
                     <div class="skill-item">
                         <div class="skill-name">
-                            <span>React</span>
-                            <span>70%</span>
+                            <span>Markup</span>
+                            <span>80%</span>
                         </div>
                         <div class="progress-container">
                             <div class="progress-bar" style="--progress-width: 70%; animation: animateProgress 1s ease-in-out forwards 0.3s"></div>
@@ -1286,7 +1286,7 @@
                     </div>
                     <div class="skill-item">
                         <div class="skill-name">
-                            <span>Node.js</span>
+                            <span>Latex</span>
                             <span>65%</span>
                         </div>
                         <div class="progress-container">
@@ -1306,7 +1306,7 @@
                     <div class="skill-item">
                         <div class="skill-name">
                             <span>Google Cloud</span>
-                            <span>75%</span>
+                            <span>85%</span>
                         </div>
                         <div class="progress-container">
                             <div class="progress-bar" style="--progress-width: 75%; animation: animateProgress 1s ease-in-out forwards 0.1s"></div>
@@ -1315,7 +1315,7 @@
                     <div class="skill-item">
                         <div class="skill-name">
                             <span>Git/GitHub</span>
-                            <span>85%</span>
+                            <span>100%</span>
                         </div>
                         <div class="progress-container">
                             <div class="progress-bar" style="--progress-width: 85%; animation: animateProgress 1s ease-in-out forwards 0.2s"></div>
@@ -1324,7 +1324,7 @@
                     <div class="skill-item">
                         <div class="skill-name">
                             <span>Docker</span>
-                            <span>70%</span>
+                            <span>60%</span>
                         </div>
                         <div class="progress-container">
                             <div class="progress-bar" style="--progress-width: 70%; animation: animateProgress 1s ease-in-out forwards 0.3s"></div>
@@ -1352,7 +1352,7 @@
                     <div class="skill-item">
                         <div class="skill-name">
                             <span>Jupyter Notebook</span>
-                            <span>90%</span>
+                            <span>100%</span>
                         </div>
                         <div class="progress-container">
                             <div class="progress-bar" style="--progress-width: 90%; animation: animateProgress 1s ease-in-out forwards 0.1s"></div>
@@ -1361,7 +1361,7 @@
                     <div class="skill-item">
                         <div class="skill-name">
                             <span>Kaggle</span>
-                            <span>85%</span>
+                            <span>95%</span>
                         </div>
                         <div class="progress-container">
                             <div class="progress-bar" style="--progress-width: 85%; animation: animateProgress 1s ease-in-out forwards 0.2s"></div>
@@ -1811,7 +1811,7 @@
                     <div class="metric-icon">
                         <i class="fab fa-linkedin"></i>
                     </div>
-                    <h3>10.5K+</h3>
+                    <h3>11.6K+</h3>
                     <div class="metric-name">LinkedIn Connections</div>
                     <div class="metric-description">Professional network growth</div>
                 </div>
@@ -1820,7 +1820,7 @@
                     <div class="metric-icon">
                         <i class="fab fa-github"></i>
                     </div>
-                    <h3>172+</h3>
+                    <h3>192+</h3>
                     <div class="metric-name">GitHub Followers</div>
                     <div class="metric-description">Developer community engagement</div>
                 </div>
@@ -1829,7 +1829,7 @@
                     <div class="metric-icon">
                         <i class="fas fa-user-graduate"></i>
                     </div>
-                    <h3>50+</h3>
+                    <h3>45+</h3>
                     <div class="metric-name">Students Mentored</div>
                     <div class="metric-description">Career guidance provided</div>
                 </div>
@@ -1838,7 +1838,7 @@
                     <div class="metric-icon">
                         <i class="fas fa-project-diagram"></i>
                     </div>
-                    <h3>25+</h3>
+                    <h3>15+</h3>
                     <div class="metric-name">Projects Delivered</div>
                     <div class="metric-description">Successful project completions</div>
                 </div>
@@ -1951,9 +1951,9 @@
     <footer>
         <div class="social-links">
             <a href="https://linkedin.com/in/farhakousar" target="_blank"><i class="fab fa-linkedin"></i></a>
-            <a href="https://github.com/farhakousar" target="_blank"><i class="fab fa-github"></i></a>
-            <a href="https://medium.com/@farhakousar" target="_blank"><i class="fab fa-medium"></i></a>
-            <a href="https://twitter.com/farhakousar" target="_blank"><i class="fab fa-twitter"></i></a>
+            <a href="https://github.com/farhakousar1601" target="_blank"><i class="fab fa-github"></i></a>
+            <a href="https://medium.com/@farhakousar16" target="_blank"><i class="fab fa-medium"></i></a>
+            <a href="https://twitter.com/farhakousar16" target="_blank"><i class="fab fa-twitter"></i></a>
         </div>
         <p>&copy; 2025 Farha Kousar. All rights reserved.</p>
     </footer>
